--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3.9'
 services:
   ssh.cyrhades.fr:
-    build: ssh
+    build: ./.docker/ssh
   webssh.cyrhades.fr:
-    build: webssh
+    build: ./.docker/webssh
     ports:
-    - ${PORT}:8888
+      - ${PORT}:8888
   robot.cyrhades.fr:
-    image:  anssi/fcsc2023-pwn-robot:latest
+    image: anssi/fcsc2023-pwn-robot:latest
     read_only: true
     ports:
       - ${PORT_SSH}:4000
